# ai-telegram-bot

./: .env.example  .pre-commit-config.yaml  README.md  TelegramBotAI.py  compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto_approve.yml  codeql.yml  deps_bump.yml  main.yml
scripts/: docker-entrypoint.sh
src/: alembic.ini  main.py
src/ai_telegram_bot/: TelegramBotAI.py  config.py  constants.py  exceptions.py  general.py  gpt.py  models.py
src/ai_telegram_bot/data/: __init__.py  config.py  constants.py
src/ai_telegram_bot/exceptions/: __init__.py  base.py  exceptions.py
src/ai_telegram_bot/filters/: __init__.py
src/ai_telegram_bot/handlers/shared/: __init__.py  voice.py
src/ai_telegram_bot/handlers/user/: __init__.py  clear.py  donate.py  start.py  state.py  taro.py  text.py  voice.py
src/ai_telegram_bot/handlers/user/donate/: __init__.py  donate.py  paysupport.py  refund.py
src/ai_telegram_bot/handlers/user/gpt/: __init__.py  text.py  voice.py
src/ai_telegram_bot/handlers/user/taro/: __init__.py  additional_info.py  cmd_continue.py  taro.py
src/ai_telegram_bot/keyboards/: donate.py
src/ai_telegram_bot/l10n/: Language name  ar-SA.ftl  en-US.ftl  fi-FI.ftl  ga-IE.ftl  ja-JP.ftl  locale.ftl  pl-PL.ftl  sl-SI.ftl  th-TH.ftl  uk-UA.ftl
src/ai_telegram_bot/middlewares/: __init__.py  cache.py  localization.py  logging.py  session.py
src/ai_telegram_bot/models/: __init__.py  base.py  db_helper.py  gpt.py  user.py
src/ai_telegram_bot/services/: gpt.py  taro.py
src/ai_telegram_bot/states/: user.py
src/ai_telegram_bot/utils/: __init__.py  audio.py  cache.py  field_helper.py  fluent.py  gpt_provider.py  logging.py  voice.py
src/alembic/: env.py
src/alembic/versions/: 2024_11_14_0540-49f878875b63_create_users_table.py
