[project]
name = "ai-telegram-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nikmosi", email = "i@nikmosi.ru"},
    {name = "*8_a.k_8", email = "kinglook1998@gmail.com"}
]
dependencies = [
    "aiogram>=3.13.1",
    "g4f>=0.3.3.1",
    "pydantic-settings>=2.6.0",
    "aiohttp-socks>=0.9.0",
    "loguru>=0.7.2",
    "SpeechRecognition>=3.11.0",
    "ffmpeg-python>=0.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
